--- a/manifest.json
+++ b/manifest.json
@@ -19,15 +19,15 @@
     "http://www.google.com/bookmarks/", "https://www.google.com/bookmarks/", "http://*/*", "https://*/*" ,
     "bookmarks",
     "tabs",
-    "activeTab","contextMenus","cookies","notifications","storage", "history"
-
+    "activeTab","contextMenus","cookies","notifications","storage", "history", "downloads",
+        "<all_urls>" 
   ],
 
   "optional_permissions": [
     "http://www.google.com/bookmarks/", "https://www.google.com/bookmarks/", "http://*/*", "https://*/*" ,
     "bookmarks",
     "tabs",
-    "activeTab","cookies","notifications", "history"
+    "activeTab","cookies","notifications", "history", "downloads"
 
   ],
 
