+ reset settings button ! clrFilter.svg, readLater*.* - permissions "<all_urls>" ! css

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
-  "name": "Fess GBE2",
-  "version": "1.0.1b",
+  "name": "Fess Google Bookmark Extension",
+  "version": "1.0.0b",
   "description": "Allows you to access and manage your Google Bookmarks.",
   "icons": {
     "48": "images/logo.svg"
@@ -15,12 +15,12 @@
   },
 
   "permissions": [
-    "<all_urls>",
+    "https://www.google.com/bookmarks/*", "http://www.google.com/s2/favicons*",
     "tabs", "activeTab","contextMenus","notifications","storage", "history", "downloads"
   ],
 
   "optional_permissions": [
-    "<all_urls>",
+    "https://www.google.com/bookmarks/*", "http://www.google.com/s2/favicons*",
     "tabs", "activeTab","notifications", "history"
   ],
 
